<resources>
    <string name="app_name">Assesment</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an Account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="shop_ui">Shop Ui</string>
    <string name="shop_image">Shop Image</string>
    <string name="textview">TextView</string>
    <string name="store_name">Store Name</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="_5">/5</string>
    <string name="options_near_you">Options near you</string>
    <string name="food">Food</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="store_name_menu">Store Name</string>
    <string name="s_menu">\'s Menu</string>
    <string name="back">Back</string>
    <string name="checkout">Checkout</string>
    <string name="basket">Basket</string>
    <string name="_10">10</string>
    <string name="euro">€</string>
    <string name="your_order_has_been_declined_your_account_will_not_be_charged">Your order has been declined.\nYour account will not be charged.</string>
    <string name="the_order_has_been_declined">Order declined</string>
    <string name="retry_order">Retry order</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="has_accepted_your_order_and_your_account_has_been_charged_the_restaurant_is_preparing_your_items_order_will_arrive_shortly">has accepted your order and your account has been charged.\nThe restaurant is preparing your items.\nOrder will arrive shortly</string>
    <string name="rate_order">Rate Order</string>
    <string name="home">Home</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price:</string>
    <string name="pay">Pay</string>
    <string name="trash">trash</string>
    <string name="please_rate_your_experience">Please rate your experience</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="with">with:</string>
    <string name="km"> km</string>
    <string name="about">About: </string>
    <string name="soon">Soon</string>
    <string name="new_user_please_enter_your_address">New user \nPlease enter your address</string>
    <string name="address_line">Address Line</string>
    <string name="autocomplete_address">Autocomplete Address</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
</resources>