<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <ImageView
        android:id="@+id/Shop_Image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shop_image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/ShopName_textView"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/store_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ShopDist_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ShopRating_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="16sp" />
</LinearLayout>
