<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlacedActivity">

    <TextView
        android:id="@+id/Accepted_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="99dp"
        android:text="@string/order_accepted"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Accept_Explain_Text"
        android:layout_width="348dp"
        android:layout_height="161dp"
        android:layout_marginStart="10dp"
        android:text="@string/has_accepted_your_order_and_your_account_has_been_charged_the_restaurant_is_preparing_your_items_order_will_arrive_shortly"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accept_Name" />

    <TextView
        android:id="@+id/Accept_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/store_name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accepted_Text" />

    <Button
        android:id="@+id/Accept_Rate_Button"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="15dp"
        android:onClick="onclickRate"
        android:text="@string/rate_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accept_Explain_Text" />

    <Button
        android:id="@+id/Accept_Home_Button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:onClick="onclickHome"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accept_Rate_Button" />
</androidx.constraintlayout.widget.ConstraintLayout>