<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity">

    <TextView
        android:id="@+id/Rating_Explain_Text"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/please_rate_your_experience"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rating_Tittle_Text" />

    <TextView
        android:id="@+id/Rating_Tittle_Text"
        android:layout_width="166dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/rate_order"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rating_Explain_Text">

        <TextView
            android:id="@+id/Rating_With_Text"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/with"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Rating_Name_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/Rating_Bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:progressTint="@color/main_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/Rating_Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="40dp"
        android:onClick="onclickRate"
        android:text="@string/submit_rating"
        android:background="@color/main_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rating_Bar" />

    <Button
        android:id="@+id/Rating_Cancel_Button"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="60dp"
        android:onClick="onclickCancel"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rating_Button" />


</androidx.constraintlayout.widget.ConstraintLayout>