<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/Basket_Remove"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_trash"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/BasketName_textView"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/BasketPrice_textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/_10"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/BasketMoney_textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/euro"
        android:textSize="16sp" />
</LinearLayout>