<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Input_Pass"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Email" />


    <EditText
        android:id="@+id/Input_Email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Button_Login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/login"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input_Pass" />

    <TextView
        android:id="@+id/TextButton_SignUp"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="121dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/dont_have_an_account_sign_up"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_Login"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>