<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/Item_Image"
        android:layout_width="182dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/food"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ItemName_textView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/item_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ItemDesc_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ItemPrice_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemPound_textView"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:text="£"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
